--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,29 +24,36 @@ main {
     }
 }
 
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  font-family: "Roboto", sans-serif;
+}
 
 p {
     font-size: 16px;
 }
 
-header {
-    text-align: center;
-    margin: 30px;
+header  {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    min-width: 320px;
+    padding: 21px 0;
 
-    @media (max-width: 768px) {
-        padding-left: 50px;
+    img {
+        max-width: 168px;
     }
+
 }
 
-header img {
-    width: 50%;
-}
-
-.bold {
-    font-weight: bold;
-}
 
 h1 {
+    font-family: "roboto", sans-serif;
     text-align: center;
     margin: 0;
     font-size: 40px;
@@ -237,9 +244,20 @@ h1 {
     justify-content: center;
     margin-bottom: 100px;
 }
-
 }
 
+
+
+.btn-new {
+    background-color: #99E2D0;
+    color: #1b6150;
+    padding: 0.5rem;
+    border-radius: 0.125rem;
+    position: relative;
+    top: 1rem;
+    right: 0.75rem;
+}
+  
 .card {
     width: 498px;
     height: 231px;
@@ -290,6 +308,8 @@ footer {
     color: white;  
     display: flex;
     flex-direction: row-reverse;
+    margin-top: 70px;
+    box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
 
     @media (max-width: 768px) {
         width: 120%;
@@ -330,7 +350,13 @@ footer {
 
     }
 }
- 
+
+footer .logo-footer {
+    font-family: "Shrikhand", cursive;
+    font-weight: normal;
+    font-size: 20px;
+    margin-bottom: 15px;
+}
 
 
 
