--- a/page2.css
+++ b/page2.css
@@ -2,6 +2,15 @@ body {
   width: 100%;
   margin: auto;
   max-width: 1440px;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
+}
+
+h1,
+h2,
+h3,
+h4,
+p {
+  font-family: "roboto", sans-serif;
 }
 
 .head-mobile {
@@ -11,6 +20,21 @@ body {
   .head-mobile {
     width: 110%;
   }
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  min-width: 320px;
+  padding: 21px 0;
+}
+header img {
+  max-width: 168px;
+}
+header i {
+  align-items: flex-start;
 }
 
 main img {
@@ -25,12 +49,11 @@ main img {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: lightgray;
+  background-color: #F6F6F6;
   flex-direction: column;
   border-radius: 3rem 3rem 0 0;
-  margin-top: -40px;
+  margin: -40px auto;
   position: relative;
-  margin-left: 220px;
 }
 .main-container h1 {
   font-family: "Shrikhand", cursive;
@@ -43,19 +66,43 @@ main img {
   padding-right: 3rem;
 }
 
-.card {
+.card-title {
+  font-family: "Shrikhand", cursive;
+  display: flex;
+  gap: 20px;
+}
+
+.far {
+  align-self: flex-end;
+}
+
+.starter h3::after {
+  content: "";
+  display: block;
+  width: 43px;
+  height: 3px;
+  background: #99E2D0;
+}
+
+.card-menu {
   display: flex;
   width: 634px;
   background: var(--white, #FFF);
   border-radius: 20px;
 }
 
-.card-content {
+.card-menu .card {
+  padding: 10px;
+  max-width: 100%;
+  overflow: hidden;
+  flex: 1;
   display: flex;
-  width: 634px;
-  height: 69px;
+  justify-content: space-between;
+}
+
+.prix {
+  display: flex;
   align-items: center;
-  background-color: white;
 }
 
 .starter {
@@ -65,6 +112,10 @@ main img {
   align-items: center;
   margin-bottom: 40px;
 }
+.starter h3 {
+  align-self: flex-start;
+  font-weight: 300;
+}
 
 .dish {
   display: flex;
@@ -72,6 +123,18 @@ main img {
   gap: 20px;
   align-items: center;
   margin-bottom: 40px;
+}
+.dish h3 {
+  align-self: flex-start;
+  font-weight: 300;
+}
+
+.dish h3::after {
+  content: "";
+  display: block;
+  width: 43px;
+  height: 3px;
+  background: #99E2D0;
 }
 
 .dessert {
@@ -81,14 +144,37 @@ main img {
   align-items: center;
   margin-bottom: 70px;
 }
+.dessert h3 {
+  align-self: flex-start;
+  font-weight: 300;
+}
 
+.dessert h3::after {
+  content: "";
+  display: block;
+  width: 43px;
+  height: 3px;
+  background: #99E2D0;
+}
+
+.btn-explore {
+  margin-top: 40px;
+  margin-bottom: 60px;
+  text-align: center;
+}
 .btn-explore label {
-  padding: 20px;
-  color: white;
-  border-radius: 35px;
-  font-size: 1.3rem;
-  background: linear-gradient(#ff79da, #9356dc);
-  box-shadow: 0 3px 10px darkgray;
+  background-color: #9356DC;
+  padding: 15px 50px;
+  border-radius: 30px;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  color: #FFF;
+  font-weight: normal;
+  font-size: 18px;
+  margin: 0 auto;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  transition: background-color 250ms;
+  box-shadow: 0.25rem 0.25rem 10px rgba(0, 0, 0, 0.25);
 }
 
 .btn-explore label:hover {
@@ -105,7 +191,8 @@ footer {
   color: white;
   display: flex;
   flex-direction: row-reverse;
-  margin-top: 70px;
+  margin-top: 40px;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.25);
 }
 @media (max-width: 768px) {
   footer {
@@ -144,6 +231,13 @@ footer a {
     flex-direction: column-reverse;
     gap: 0;
   }
+}
+
+footer .logo-footer {
+  font-family: "Shrikhand", cursive;
+  font-weight: normal;
+  font-size: 20px;
+  margin-bottom: 15px;
 }
 
 /*# sourceMappingURL=page2.css.map */
