--- a/page5.css
+++ b/page5.css
@@ -109,58 +109,30 @@ main img {
   background: #99E2D0;
 }
 
+.card-menu .card {
+  padding: 10px;
+  max-width: 100%;
+  overflow: hidden;
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  border-radius: 15px;
+  background: var(--white, #FFF);
+  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1);
+}
+
 .card-menu {
   display: flex;
   width: 634px;
   background: var(--white, #FFF);
   border-radius: 20px;
-}
-.card-menucard {
-  width: 350px;
-  padding: 14px 0;
-  border-radius: 15px;
-  display: flex;
-  justify-content: space-between;
-}
-.card-menucard h3 {
-  font-size: 16px;
-}
-.card-menucard h4 {
-  font-size: 16px;
-}
-@media (max-width: 768px) {
-  .card-menucard h3 {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  .card-menucard p {
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
+  overflow: hidden;
+  cursor: pointer;
 }
 .card-menu:hover .btn-card {
   margin-right: 0px;
   min-width: 60px;
   transition: margin-right 0.5s;
-}
-.card-menu:hover .card-content {
-  white-space: nowrap;
-  text-overflow: ellipsis;
-}
-.card-menu:hover .card-content h3 {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.card-menu:hover .card-content p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
-}
-.card-menu:hover .circle {
-  transform: rotate(360deg);
 }
 
 .btn-card {
@@ -169,7 +141,9 @@ main img {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: -64px;
+  margin-right: -60px;
+  border-radius: 0 15px 15px 0;
+  overflow: hidden;
 }
 
 .circle {
@@ -181,28 +155,15 @@ main img {
   align-items: center;
   align-self: center;
   align-content: center;
-  transition: transform 0.5s;
   position: relative;
+  transition: transform 0.5s;
 }
 .circle .fas {
   color: #99E2D0;
 }
 
-.card-menu .card {
-  padding: 10px;
-  max-width: 100%;
-  overflow: hidden;
-  flex: 1;
-  display: flex;
-  justify-content: space-between;
-  border-radius: 15.043px;
-  background: var(--white, #FFF);
-  box-shadow: 0px 4.0114941597px 15.0431032181px 0px rgba(0, 0, 0, 0.1);
-}
-
 .prix {
   display: flex;
-  align-items: center;
   align-self: flex-end;
 }
 
@@ -300,7 +261,7 @@ main img {
   text-align: center;
 }
 .btn-explore label {
-  background-color: #9356DC;
+  background-color: #9356dc;
   padding: 15px 50px;
   border-radius: 30px;
   text-align: center;
@@ -309,7 +270,7 @@ main img {
   font-weight: normal;
   font-size: 18px;
   margin: 0 auto;
-  background-image: linear-gradient(#FF79DA, #9356DC);
+  background-image: linear-gradient(#ff79da, #9356dc);
   transition: background-color 250ms;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
 }
