--- a/sass/page2.scss
+++ b/sass/page2.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 body {
     width: 100%;
     margin: auto;
@@ -127,7 +129,19 @@ main {
     display: block;
     width: 43px;
     height: 3px;
-    background: #99E2D0;
+    background: $green;
+}
+
+.card-menu .card {
+    padding: 10px;
+    max-width: 100%;
+    overflow: hidden;
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    border-radius: 15px;
+    background: var(--white, #FFF);
+    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.10);
 }
 
 .card-menu {
@@ -135,37 +149,8 @@ main {
     width: 634px;
     background: var(--white, #FFF);
     border-radius: 20px;
-
-
-    &card {
-        width: 350px;
-        padding: 14px 0;
-        border-radius: 15px;
-        display: flex;
-        justify-content: space-between;
-
-        h3 {
-            font-size: 16px;
-        }
-
-        h4 {
-            font-size: 16px;
-        }
-        @media (max-width: 768px) {
-            h3 {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-
-            p {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-        }
-
-        }
+    overflow: hidden;
+    cursor: pointer;
 
 
     &:hover {
@@ -173,42 +158,19 @@ main {
             margin-right: 0px;
             min-width: 60px;
             transition: margin-right 0.5s;    
-        }
-
-        .card-content {
-            white-space: nowrap;
-            text-overflow: ellipsis;
-
-            h3 {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-
-            p {
-                text-overflow: ellipsis;
-                white-space: nowrap;
-                overflow: hidden;
-            }
-
-
-            }
-
-        .circle {
-            transform: rotate(360deg);
-        }
-
-        
+        }    
     }
 }
 
 .btn-card {
-    background-color: #99E2D0;
+    background-color: $green;
     min-width: 60px;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-right: -64px;
+    margin-right: -60px;
+    border-radius: 0 15px 15px 0;
+    overflow: hidden;
 }
 
 .circle {
@@ -220,29 +182,16 @@ main {
     align-items: center;
     align-self: center;
     align-content: center;
-    transition: transform 0.5s;
     position: relative;
+    transition: transform 0.5s;
 
     .fas {
-        color: #99E2D0;
+        color: $green;
     }
-}
-
-.card-menu .card {
-    padding: 10px;
-    max-width: 100%;
-    overflow: hidden;
-    flex: 1;
-    display: flex;
-    justify-content: space-between;
-    border-radius: 15.043px;
-    background: var(--white, #FFF);
-    box-shadow: 0px 4.011494159698486px 15.043103218078613px 0px rgba(0, 0, 0, 0.10);
 }
 
 .prix {
     display: flex;
-    align-items: center;
     align-self: flex-end;
 }
 
@@ -312,7 +261,7 @@ main {
     display: block;
     width: 43px;
     height: 3px;
-    background: #99E2D0;
+    background: $green;
 }
 
 
@@ -348,7 +297,7 @@ main {
     display: block;
     width: 43px;
     height: 3px;
-    background: #99E2D0;
+    background: $green;
 }
 
 
@@ -360,7 +309,7 @@ main {
     text-align: center;
 
     label {
-    background-color: #9356DC;
+    background-color: $purple;
     padding: 15px 50px;
     border-radius: 30px;
     text-align: center;
@@ -369,7 +318,7 @@ main {
     font-weight: normal;
     font-size: 18px;
     margin: 0 auto;
-    background-image: linear-gradient(#FF79DA, #9356DC);
+    background-image: linear-gradient($pink, $purple);
     transition: background-color 250ms;
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.25);
     }
@@ -378,7 +327,7 @@ main {
 .btn-explore label:hover {
     cursor: pointer;
     transform: scale(1.02);
-    box-shadow: 0 3px 10px #ff79da;
+    box-shadow: 0 3px 10px $pink;
 }
 
 
