--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,4 @@
-
+@import "variables";
 
 body {
     width: 100%;
@@ -50,6 +50,10 @@ h1 {
     text-align: center;
     margin: 0;
     font-size: 40px;
+
+    @media (max-width: 768px) {
+        font-size: 24px;
+    }
 }
 
 
@@ -81,10 +85,6 @@ h1 {
             font-size: 18px;
         }
     
-        @media (max-width: 768px) {
-            width: 95%;
-        
-        }
     }
 
     .search-bar {
@@ -92,20 +92,33 @@ h1 {
         background: var(--grey-2, #EAEAEA);
         width: 100%;
         height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     
         @media (max-width: 768px) {
-            width: 95%;
             padding: 0;
         }
     
         input {
-            margin: 15px;
+            margin: 0;
+        }
+
+        img {
+            max-width: 12px;
+            max-height: 17px;
         }
     }
 }
 
 
 
+.navbar .search-bar input {
+    border: none;
+    font-size: 16px;
+    background-color: #EAEAEA;
+    text-align: center;
+}
 
 
 .navbar .btn-explore {
@@ -114,28 +127,24 @@ h1 {
     justify-content: center;
 }
 
-.navbar .search-bar input {
-    border: none;
-    font-size: 16px;
-    width: 200px;
-    background-color: #EAEAEA;
-}
 
 .navbar .btn-explore label {
     padding: 20px;
     color: white;
     border-radius: 30px;
     font-size: 20px;
-    background: linear-gradient(#ff79da, #9356dc);
+    background: linear-gradient($pink,$purple);
     margin-bottom: 50px;
     margin-top: 30px;
     box-shadow: 0 3px 10px darkgray;
+    font-family: 'Roboto';
+    font-size: 16px;
 }
 
 .navbar .btn-explore label:hover {
     cursor: pointer;
     transform: scale(1.02);
-    box-shadow: 0 3px 10px #ff79da;
+    box-shadow: 0 3px 10px $pink;
 }
 
 .navbar .btn-explore p {
@@ -148,14 +157,16 @@ h1 {
 
 
 .filter {
-    @media (max-width: 768px) {
-        padding: 0;
-    }
-
 
     h2 {
         padding-left: 175px;
+
+        @media (max-width: 768px) {
+            padding-left: 20px;
+        }
     }
+
+    
 }
 
 
@@ -195,17 +206,17 @@ h1 {
     }
 
     .fa-solid {
-        color: #9356dc;
+        color: $purple;
     }
 }
  
 .filter .menu .btn-1 span {
     position: relative;
     left: -16px;
-    border: 1px solid #9356dc;
+    border: 1px solid $purple;
     padding: 6px 12px;
     border-radius: 50%;
-    background-color: #9356dc;
+    background-color: $purple;
     color: white;
     margin: 20px 0;
 }
@@ -217,7 +228,7 @@ h1 {
     cursor: pointer;
     transform: scale(1.02);
     background-color: #F5EDFF;
-    box-shadow: 0 3px 5px #ff79da;
+    box-shadow: 0 3px 5px $pink;
 }
 
 
@@ -313,9 +324,10 @@ h1 {
         top: 20px;
         font-weight: bold;
         background-color: #92e2d0;
-        color: #008766;
+        color: $green;
         padding: 10px;
-        width: 65px;
+        border-radius: 2px;
+        font-family: 'Roboto';
         } 
 
     h2 {
@@ -349,7 +361,7 @@ h1 {
             display: inline;
         }
                                                
-        background: linear-gradient(#ff79da, #9356dc);
+        background: linear-gradient($pink, $purple);
         animation:  effet-opacity 1.5s ease;
         background-clip: border-box;
         -webkit-background-clip: text;
