--- a/style.css
+++ b/style.css
@@ -46,6 +46,11 @@ h1 {
   margin: 0;
   font-size: 40px;
 }
+@media (max-width: 768px) {
+  h1 {
+    font-size: 24px;
+  }
+}
 
 @media (max-width: 768px) {
   .head-mobile {
@@ -68,38 +73,39 @@ h1 {
 .head-mobile .search p {
   font-size: 18px;
 }
-@media (max-width: 768px) {
-  .head-mobile .search {
-    width: 95%;
-  }
-}
 .head-mobile .search-bar {
   text-align: center;
   background: var(--grey-2, #EAEAEA);
   width: 100%;
   height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 @media (max-width: 768px) {
   .head-mobile .search-bar {
-    width: 95%;
     padding: 0;
   }
 }
 .head-mobile .search-bar input {
-  margin: 15px;
+  margin: 0;
+}
+.head-mobile .search-bar img {
+  max-width: 12px;
+  max-height: 17px;
+}
+
+.navbar .search-bar input {
+  border: none;
+  font-size: 16px;
+  background-color: #EAEAEA;
+  text-align: center;
 }
 
 .navbar .btn-explore {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-}
-
-.navbar .search-bar input {
-  border: none;
-  font-size: 16px;
-  width: 200px;
-  background-color: #EAEAEA;
 }
 
 .navbar .btn-explore label {
@@ -111,6 +117,8 @@ h1 {
   margin-bottom: 50px;
   margin-top: 30px;
   box-shadow: 0 3px 10px darkgray;
+  font-family: "Roboto";
+  font-size: 16px;
 }
 
 .navbar .btn-explore label:hover {
@@ -127,13 +135,13 @@ h1 {
   flex-basis: 100%;
 }
 
-@media (max-width: 768px) {
-  .filter {
-    padding: 0;
-  }
-}
 .filter h2 {
   padding-left: 175px;
+}
+@media (max-width: 768px) {
+  .filter h2 {
+    padding-left: 20px;
+  }
 }
 
 .menu {
@@ -274,7 +282,8 @@ h1 {
   background-color: #92e2d0;
   color: #008766;
   padding: 10px;
-  width: 65px;
+  border-radius: 2px;
+  font-family: "Roboto";
 }
 .restaurants .card h2 {
   margin: 0 0 0 15px;
